semester2/object_oriented_programming/tps/.svn/pristine/21/21094aded88c1751090b5978f91e3d4e4b357574.svn-base
allumettes/StrategieExpert.java:18: error: cannot find symbol
			return Generateur.nb_Aleatoire(jeu);
			       ^
  symbol:   variable Generateur
  location: class StrategieExpert
1 error
